--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,6 +3,6 @@
 
 <ul>
 <% @projects.each do |project| %>
-  <li><%= link_to project.title, @project %></li>
+  <li><%= link_to project.title, project %></li>
 <% end %>
 </ul>
