--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,2 +1,4 @@
 <%= link_to "Back", projects_path %>
+<%= link_to "Edit", edit_project_path(@project) %>
 <h1><%= @project.title %></h1>
+<p><%= @project.description %></p>
